force-app/main/default/objects/SalesAgreement/SalesAgreement.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>