force-app/main/default/objects/SalesAgreement/fields/PMC_CLM_AgreementDocumentStatus__c.field-meta.xml
<CustomField>
    <fullName>PMC_CLM_AgreementDocumentStatus__c</fullName>
    <label>Agreement Document Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Signatures</fullName>
            </value>
            <value>
                <fullName>Partially Signed</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>