force-app/main/default/objects/SalesAgreement/fields/PMC_CLM_AmendmentNumber__c.field-meta.xml
<CustomField>
    <fullName>PMC_CLM_AmendmentNumber__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Amendment Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>