force-app/main/default/objects/SalesAgreement/fields/PMC_CLM_isAmendment__c.field-meta.xml
<CustomField>
    <fullName>PMC_CLM_isAmendment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be used for the backend purpose of indicating that the sales agreement has been created as a product of the amendment flow, and used in CLM to control visibility of fields in the intake form and in the workflow</description>
    <label>isAmendment</label>
    <type>Checkbox</type>
</CustomField>