force-app/main/default/objects/SalesAgreement/fields/PMC_CLM_SalesAgreementAutoNumber__c.field-meta.xml
<CustomField>
    <fullName>PMC_CLM_SalesAgreementAutoNumber__c</fullName>
    <displayFormat>A-{0000000}</displayFormat>
    <externalId>true</externalId>
    <label>Sales Agreement Auto Number</label>
    <type>AutoNumber</type>
</CustomField>