force-app/main/default/objects/SalesAgreement/fields/PMC_SS_AgreementType__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_AgreementType__c</fullName>
    <description>States the Agreement Type</description>
    <label>Agreement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Annual Sales Agreement</fullName>
            </value>
            <value>
                <fullName>Business Partner Agreement</fullName>
            </value>
            <value>
                <fullName>Ex-Space Agreement</fullName>
            </value>
            <value>
                <fullName>Master Sales Agreement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>