force-app/main/default/objects/SalesAgreement/fields/PMC_SS_AmendedReason__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_AmendedReason__c</fullName>
    <description>Reason for Amending Sales Agreement</description>
    <label>Amended Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Changes in Circumstance</fullName>
            </value>
            <value>
                <fullName>Changes to Terms</fullName>
            </value>
            <value>
                <fullName>Dispute</fullName>
            </value>
            <value>
                <fullName>Error Correction</fullName>
            </value>
            <value>
                <fullName>New Product Interests</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>