force-app/main/default/objects/SalesAgreement/fields/PMC_SS_ApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_ApprovalStatus__c</fullName>
    <description>Field to track the approval status of the Sales Agreement.</description>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Submitted</fullName>
                <default>true</default>
                <label>Not Submitted</label>
            </value>
            <value>
                <fullName>Under Revision</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>