force-app/main/default/objects/SalesAgreement/fields/PMC_SS_CalculateActualValuesUsingDPE__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_CalculateActualValuesUsingDPE__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field indicates the Actuals should be calculated using DPE from Invoice Items</description>
    <label>Calculate Actual Values Using DPE</label>
    <type>Checkbox</type>
</CustomField>