force-app/main/default/objects/SalesAgreement/fields/PMC_SS_PreviousStatus__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_PreviousStatus__c</fullName>
    <description>Contains the Previous Status</description>
    <label>Previous Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>