force-app/main/default/objects/SalesAgreement/fields/PMC_SS_Pricing__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Pricing__c</fullName>
    <label>Pricing</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>