force-app/main/default/objects/SalesAgreement/fields/PMC_SS_SalesAgreementExternalId__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_SalesAgreementExternalId__c</fullName>
    <description>This field states the Sales Agreement External Id</description>
    <externalId>true</externalId>
    <label>Sales Agreement External Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>