force-app/main/default/objects/SalesAgreement/fields/PMC_SS_TotalExSpaceIncentives__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_TotalExSpaceIncentives__c</fullName>
    <description>This field states total accumulation of all ex-space incentives</description>
    <label>Total Ex-Space Incentives</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>