force-app/main/default/objects/SalesAgreement/fields/PMC_SS_TotalGrowthIncentives__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_TotalGrowthIncentives__c</fullName>
    <description>This field states total accumulation of all growth incentives</description>
    <label>Total Growth Incentives</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>