force-app/main/default/objects/SalesAgreement/fields/PMC_SS_TotalPotentialIncentives__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_TotalPotentialIncentives__c</fullName>
    <description>This field states total accumulation of all incentives</description>
    <label>Total Potential Incentives</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>