force-app/main/default/objects/SalesAgreement/recordTypes/PMC_SS_AnnualSalesAgreement.recordType-meta.xml
<RecordType>
    <fullName>PMC_SS_AnnualSalesAgreement</fullName>
    <active>true</active>
    <description>South America Sales Agreement</description>
    <label>Annual Sales Agreement</label>
</RecordType>