force-app/main/default/objects/SalesAgreement/recordTypes/PMC_SS_BusinessPartnerAgreement.recordType-meta.xml
<RecordType>
    <fullName>PMC_SS_BusinessPartnerAgreement</fullName>
    <active>true</active>
    <description>North America Business Partner Agreement</description>
    <label>Business Partner Agreement</label>
</RecordType>