force-app/main/default/objects/SalesAgreement/recordTypes/PMC_SS_IndustrialLongTermAgreement.recordType-meta.xml
<RecordType>
    <fullName>PMC_SS_IndustrialLongTermAgreement</fullName>
    <active>true</active>
    <description>Industrial Long-Term Agreement</description>
    <label>Industrial Long-Term Agreement</label>
</RecordType>