force-app/main/default/objects/SalesAgreement/recordTypes/PMC_SS_InternationalLongTermAgreement.recordType-meta.xml
<RecordType>
    <fullName>PMC_SS_InternationalLongTermAgreement</fullName>
    <active>true</active>
    <description>International Long-Term Agreement</description>
    <label>International Long-Term Agreement</label>
</RecordType>