force-app/main/default/objects/SalesAgreement/validationRules/PMC_SS_RestrictSalesAgmtEditWhenArchived.validationRule-meta.xml
<ValidationRule>
    <fullName>PMC_SS_RestrictSalesAgmtEditWhenArchived</fullName>
    <active>true</active>
    <description>Restrict Edit or Update of Sales Agreement when the Status is Archived.</description>
    <errorConditionFormula>AND(
NOT( $Setup.PMC_ProcessSwitches__c.PMC_BypassValidationRule__c ) ,
ISPICKVAL(  PRIORVALUE(Status) , &apos;Archived&apos;)  
)</errorConditionFormula>
    <errorMessage>Archived Sales Agreement cannot be updated.</errorMessage>
</ValidationRule>