force-app/main/default/objects/SalesAgreement/validationRules/PMC_SS_RestrictStatusChangeAfterApproved.validationRule-meta.xml
<ValidationRule>
    <fullName>PMC_SS_RestrictStatusChangeAfterApproved</fullName>
    <active>true</active>
    <description>Restrict the Sales Agreement to move it from Approved to Draft.</description>
    <errorConditionFormula>AND(
NOT($Setup.PMC_ProcessSwitches__c.PMC_BypassValidationRule__c) ,
ISCHANGED( Status ),
ISPICKVAL(PRIORVALUE(Status),&quot;Approved&quot;),
(ISPICKVAL( Status , &apos;Draft&apos;) || ISPICKVAL( Status , &apos;Archived&apos;))
)</errorConditionFormula>
    <errorMessage>Sales Agreement can’t be moved from Approved to other stage. Please amend the Sales Agreement to make any changes.</errorMessage>
</ValidationRule>