force-app/main/default/objects/SalesAgreement/validationRules/PMC_SS_RestrictStatusJustPendingWithCust.validationRule-meta.xml
<ValidationRule>
    <fullName>PMC_SS_RestrictStatusJustPendingWithCust</fullName>
    <active>true</active>
    <description>This validation rule ensures that Sales agreement status cannot be manually changed to Pending with Customer.</description>
    <errorConditionFormula>AND(
NOT($Setup.PMC_ProcessSwitches__c.PMC_BypassValidationRule__c),
ISPICKVAL( Status , &apos;Pending with Customer&apos;),
NOT(ISPICKVAL( PMC_SS_ApprovalStatus__c , &apos;Approved&apos;))
)</errorConditionFormula>
    <errorMessage>Sales Agreement must be approved internally prior to sending to customer, therefore this SA cannot be created/updated with the status of &quot;Pending with Customer&quot;</errorMessage>
</ValidationRule>