force-app/main/default/objects/SalesAgreement/validationRules/PMC_SS_RestrictStatusPendingWithCustomer.validationRule-meta.xml
<ValidationRule>
    <fullName>PMC_SS_RestrictStatusPendingWithCustomer</fullName>
    <active>false</active>
    <description>This validation rule ensures that Sales agreement status cannot be manually changed to Pending with Customer. Also, status cannot be moved from Pending with Customer to Draft or Approved.</description>
    <errorConditionFormula>AND(
NOT($Setup.PMC_ProcessSwitches__c.PMC_BypassValidationRule__c) ,
OR(

AND(
 ISPICKVAL( Status , &apos;Pending with Customer&apos;),
 NOT(ISPICKVAL(  PMC_SS_ApprovalStatus__c  , &apos;Approved&apos;)) 
),

AND(
ISCHANGED( Status ),
ISPICKVAL(PRIORVALUE(Status),&apos;Pending with Customer&apos;),
OR(
ISPICKVAL( Status , &apos;Draft&apos;),
ISPICKVAL( Status , &apos;Archived&apos;)
)
)

)

)</errorConditionFormula>
    <errorMessage>Sales Agreement can&apos;t be created with &apos;Pending with Customer&apos; status or manually updated to/from &apos;Pending with Customer&apos; status.</errorMessage>
</ValidationRule>