force-app/main/default/objects/SalesAgreement/listViews/All_SalesAgreements.listView-meta.xml
<ListView>
    <fullName>All_SalesAgreements</fullName>
    <columns>Name</columns>
    <columns>PMC_CLM_SalesAgreementAutoNumber__c</columns>
    <columns>Owner</columns>
    <columns>Account</columns>
    <columns>Status</columns>
    <columns>StartDate</columns>
    <columns>EndDate</columns>
    <filterScope>Everything</filterScope>
    <label>All Sales Agreements</label>
</ListView>