force-app/main/default/objects/SalesAgreement/listViews/PMC_SS_SalesAgreementApprovals_SalesAgreement.listView-meta.xml
<ListView>
    <fullName>PMC_SS_SalesAgreementApprovals_SalesAgreement</fullName>
    <filterScope>Queue</filterScope>
    <label>Sales Agreement Approvals</label>
    <queue>PMC_SS_SalesAgreementApprovals</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>